--- a/.github/workflows/generate-inventory.yaml
+++ b/.github/workflows/generate-inventory.yaml
@@ -32,3 +32,7 @@ jobs:
                     ansible_host: 10.162.0.2
                     ansible_user: revin
                     db_version: 14
+                   
+
+              
+          EOF
